--- a/about.html
+++ b/about.html
@@ -187,20 +187,20 @@
 
           <div class="col-lg-6 position-relative align-self-start" data-aos="fade-up" data-aos-delay="200">
             <img src="assets/img/about-thumb.webp" class="img-fluid" alt="">
-            <a href="https://www.youtube.com/watch?v=8PmM6SUn7Es&pp=ygUQZGlldCAgS3Vyemdlc2FndA%3D%3D" class="glightbox pulsating-play-btn"></a>
+            <!-- <a href="https://www.youtube.com/watch?v=8PmM6SUn7Es&pp=ygUQZGlldCAgS3Vyemdlc2FndA%3D%3D" class="glightbox pulsating-play-btn"></a> -->
           </div>
 
           <div class="col-lg-6 content" data-aos="fade-up" data-aos-delay="100">
             <h3>Meet our Founder</h3>
             <p>
-              Welcome! I'm Shubhangi Sharma, A Certified Diet Consultant and I'm truly glad you're here. Beyond my credentials, I’m deeply passionate about helping individuals cultivate a healthier, more compassionate relationship with food and their bodies.
-              I understand how overwhelming the health and wellness journey can feel,The constant cycle of fad diets, conflicting advice, and the pressure to always "do more" can be disheartening.
-              That’s precisely why I created this space ”Dietance” - Not Just Dieting. Living in Balance: to offer a more balanced, sustainable, and empowering approach to nutrition. One where food becomes a source of nourishment and joy, not stress or guilt. One where your body is honored, not restricted.
-              My mission is to guide you away from rigid diet rules and toward a more intuitive, vibrant way of eating — one that supports your health goals while allowing you to enjoy the foods you love. Whether you're managing a specific health condition or simply striving for more energy and vitality in your daily life, I’m here to support you as a partner and trusted guide — much like a caring family member.
-              Together, let’s move beyond the noise of diet culture and create a life where you feel truly well — physically, mentally, and emotionally. I look forward to walking this journey with you.
+              Hi, I’m Shubhangi Sharma, a Certified Diet Consultant.
+              <br>I created Dietance – Not Just Dieting. Living in Balance to help you build a healthy, stress-free relationship with food and your body.<br>
+              <br>My mission is to guide you away from rigid diets and toward a balanced, joyful, and sustainable way of eating that supports your health, energy, and confidence.<br> 
+              <br>Together, we’ll move beyond diet culture and create a life where you feel truly well — physically, mentally, and emotionally.<br>
               <br>Your Dietitian,<br>
-              <br>Shubhangi Sharma<br>
-              <br>M.Sc || B.Sc || CDE || IYCF<br>
+              <br>Shubhangi Sharma<br>M.Sc || B.Sc || CDE || IYCF
+
+              </bt>
           </div>
 
         </div>
@@ -222,7 +222,7 @@
               <div class="icon">
                 <i class="bi-lightbulb-fill"></i>
               </div>
-              <a href="kids-n.html" class="stretched-link">
+              <!-- <a href="kids-n.html" class="stretched-link"> -->
                 <h3>Vision</h3>
               </a>
               <p>To advance the field of dietetics and reduce malnutrition by providing accessible, personalised nutritional science.</p>
@@ -232,7 +232,7 @@
               <div class="icon">
                 <i class="bi-rocket-takeoff"></i>
               </div>
-              <a href="women-n.html" class="stretched-link">
+              <!-- <a href="women-n.html" class="stretched-link"> -->
                 <h3>Mission</h3>
               </a>
               <p>To translate complex nutritional science into practical, sustainable advice for everyone.</p>
@@ -242,7 +242,7 @@
               <div class="icon">
                 <i class="bi bi-gem"></i>
               </div>
-              <a href="men-n.html" class="stretched-link">
+              <!-- <a href="men-n.html" class="stretched-link"> -->
                 <h3>Values</h3>
               </a>
               <p>Commitment to compassion, integrity, and evidence-based practices, with a focus on lifelong learning.</p>
@@ -253,7 +253,7 @@
               <div class="icon">
                 <i class="bi bi-trophy-fill"></i>
               </div>
-              <a href="sports-n.html" class="stretched-link">
+              <!-- <a href="sports-n.html" class="stretched-link"> -->
                 <h3>Goals</h3>
               </a>
               <p>To empower People with personalised plans, improve public health through effective nutrition programs, and advocate for policies that support nutrition security and sustainable food systems.</p>            
