--- a/diabetes-mgmt.html
+++ b/diabetes-mgmt.html
@@ -138,7 +138,7 @@
             <div class="why-box" data-aos="zoom-out" data-aos-delay="200">
               <h3>Our Holistic Approach</h3>
               <p>
-                For those with specific dietary requirements or health conditions. Our experts provide personalised meal plans and guidance for managing diabetes, food allergies, digestive issues, and other unique health challenges.
+                For those with specific dietary requirements or health conditions. Our experts provide personalised meal plans and guidance for managing diabetes.
               </p>
               <!-- <div class="text-center">
                 <a href="#about" class="more-btn"><span>Learn More</span> <i class="bi bi-chevron-right"></i></a>
@@ -248,7 +248,7 @@
                   <div class="p-8 flex flex-col items-center">
                       <!-- Price section with strikethrough -->
                       <div class="text-center mb-4">
-                          <span class="text-gray-500 text-xl font-normal line-through mr-2">₹ 6,999</span>
+                          <span class="text-gray-500 text-xl font-normal line-through mr-2">₹ 6,000</span>
                           <span class="text-4xl font-bold">₹ 5,799<sup>*</sup></span>
                       </div>
                       
