Added social metas

--- a/index.html
+++ b/index.html
@@ -4,9 +4,22 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>DIETANCE</title>
-  <meta name="description" content="Not just Dieting. living in Balance.">
-  <meta name="keywords" content="Deit, Guidance, Nutrition, Health, Wellness">
+
+      <!-- Page Title - Change this to your name/brand (50-60 characters recommended) -->
+    <title>DIETANCE</title>
+    <link rel="icon" type="image/x-icon" href="/assets/img/branding/logo.webp"> <!-- Update this with your own favicon -->
+
+    <!-- Meta Description - Write a description (150-160 characters recommended) -->
+    <meta name="description" content="Not just Dieting. living in Balance.">
+
+    <!-- Keywords -->
+    <meta name="keywords" content="Diet, Nutrition, Health, Wellness, Balanced Living, Healthy Lifestyle, Fitness, Meal Planning, Weight Management">
+
+    <!-- Canonical URL - Helps prevent duplicate content issues -->
+    <meta rel="canonical" href="https://dietance.com">
+
+    <!-- Author Information -->
+    <meta name="author" content="Shubhangi">
 
   <link href="assets/img/fav.png" rel="icon">
   <link href="assets/img/fav-touch.png" rel="apple-touch-icon">
